Código/build/QuetzalParser.py
# Generated from Quetzal.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


from build.intermediateCode import *





class QuetzalParser ( Parser ):

    grammarFileName = "Quetzal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'func'", "'define'", "'return'", 
                     "'if'", "'else'", "'while'", "'print'", "'read'", "'main'", 
                     "'void'", "'openImg'", "'saveImg'", "'grayscale'", 
                     "'color_replace'", "'color_filter'", "'edgeDetection'", 
                     "'scaleImg'", "'getColorPalette'", "'colorMatchImage'", 
                     "'encodeSteganography'", "'decodeSteganography'", "'getImageHeight'", 
                     "'getImageWidth'", "'bool'", "'int'", "'float'", "'color'", 
                     "<INVALID>", "'White'", "'Red'", "'Lime'", "'Blue'", 
                     "'Silver'", "'Maroon'", "'Green'", "'Navy'", "'Gray'", 
                     "'Yellow'", "'Aqua'", "'Fuchsia'", "'Black'", "'Olive'", 
                     "'Teal'", "'Purple'", "';'", "':'", "','", "'_'", "'{'", 
                     "'}'", "'['", "']'", "'('", "')'", "'='", "'=='", "'>'", 
                     "'<'", "'!='", "'>='", "'<='", "'||'", "'&&'", "'\"'", 
                     "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "TK_PROGRAM", "TK_FUNC", "TK_DEFINE", 
                      "TK_RETURN", "TK_IF", "TK_ELSE", "TK_WHILE", "TK_PRINT", 
                      "TK_READ", "TK_MAIN", "TK_VOID", "TK_OPENIMG", "TK_SAVEIMG", 
                      "TK_GRAYSCALE", "TK_COLOR_REPLACE", "TK_COLOR_FILTER", 
                      "TK_EDGE_DETECTION", "TK_SCALE_IMAGE", "TK_GET_COLOR_PALETTE", 
                      "TK_COLOR_MATCH_IMAGE", "TK_ENCODE_STEGANOGRAPHY", 
                      "TK_DECODE_STEGANOGRAPHY", "TK_GET_IMAGE_HEIGHT", 
                      "TK_GET_IMAGE_WIDTH", "TK_BOOL", "TK_INT", "TK_FLOAT", 
                      "TK_COLOR", "CTE_COLOR", "TK_WHITE", "TK_RED", "TK_LIME", 
                      "TK_BLUE", "TK_SILVER", "TK_MAROON", "TK_GREEN", "TK_NAVY", 
                      "TK_GRAY", "TK_YELLOW", "TK_AQUA", "TK_FUCHSIA", "TK_BLACK", 
                      "TK_OLIVE", "TK_TEAL", "TK_PURPLE", "SYM_SEMI_COL", 
                      "SYM_DOUB_COL", "SYM_COMMA", "SYM_UNDER_SCORE", "SYM_CURLY_BRACK_OPEN", 
                      "SYM_CURLY_BRACK_CLOSE", "SYM_SQUARE_BRACK_OPEN", 
                      "SYM_SQUARE_BRACK_CLOSE", "SYM_PAREN_OPEN", "SYM_PAREN_CLOSE", 
                      "SYM_ASSIGN", "SYM_EQUAL", "SYM_GRE_THAN", "SYM_LOW_THAN", 
                      "SYM_NOT_EQUAL", "SYM_GRE_EQ", "SYM_LOW_EQ", "SYM_OR", 
                      "SYM_AND", "SYM_QUOT", "SYM_PLUS", "SYM_MINUS", "SYM_MULT", 
                      "SYM_DIV", "TYPE_FLOAT", "TYPE_INT", "TYPE_ID", "TYPE_COLOR", 
                      "CTE_TAG", "TYPE_BOOL", "NEWLINE", "WS", "BLOCK_COMMENT", 
                      "LINE_COMMENT" ]

    RULE_program = 0
    RULE_main = 1
    RULE_variables = 2
    RULE_function = 3
    RULE_block = 4
    RULE_types = 5
    RULE_constants = 6
    RULE_prints = 7
    RULE_read = 8
    RULE_statute = 9
    RULE_assignation = 10
    RULE_condition = 11
    RULE_var_cte = 12
    RULE_expression = 13
    RULE_expLogic = 14
    RULE_exp = 15
    RULE_term = 16
    RULE_factor = 17
    RULE_logic_op = 18
    RULE_returning = 19
    RULE_callfunc = 20
    RULE_loop = 21
    RULE_openimg = 22
    RULE_saveimg = 23
    RULE_color_replace = 24
    RULE_grayscale = 25
    RULE_color_filter = 26
    RULE_edgeDetection = 27
    RULE_scaleImg = 28
    RULE_getColorPalette = 29
    RULE_colorMatchImage = 30
    RULE_encodeSteganography = 31
    RULE_decodeSteganography = 32
    RULE_getImageHeight = 33
    RULE_getImageWidth = 34
    RULE_specfunct = 35

    ruleNames =  [ "program", "main", "variables", "function", "block", 
                   "types", "constants", "prints", "read", "statute", "assignation", 
                   "condition", "var_cte", "expression", "expLogic", "exp", 
                   "term", "factor", "logic_op", "returning", "callfunc", 
                   "loop", "openimg", "saveimg", "color_replace", "grayscale", 
                   "color_filter", "edgeDetection", "scaleImg", "getColorPalette", 
                   "colorMatchImage", "encodeSteganography", "decodeSteganography", 
                   "getImageHeight", "getImageWidth", "specfunct" ]

    EOF = Token.EOF
    TK_PROGRAM=1
    TK_FUNC=2
    TK_DEFINE=3
    TK_RETURN=4
    TK_IF=5
    TK_ELSE=6
    TK_WHILE=7
    TK_PRINT=8
    TK_READ=9
    TK_MAIN=10
    TK_VOID=11
    TK_OPENIMG=12
    TK_SAVEIMG=13
    TK_GRAYSCALE=14
    TK_COLOR_REPLACE=15
    TK_COLOR_FILTER=16
    TK_EDGE_DETECTION=17
    TK_SCALE_IMAGE=18
    TK_GET_COLOR_PALETTE=19
    TK_COLOR_MATCH_IMAGE=20
    TK_ENCODE_STEGANOGRAPHY=21
    TK_DECODE_STEGANOGRAPHY=22
    TK_GET_IMAGE_HEIGHT=23
    TK_GET_IMAGE_WIDTH=24
    TK_BOOL=25
    TK_INT=26
    TK_FLOAT=27
    TK_COLOR=28
    CTE_COLOR=29
    TK_WHITE=30
    TK_RED=31
    TK_LIME=32
    TK_BLUE=33
    TK_SILVER=34
    TK_MAROON=35
    TK_GREEN=36
    TK_NAVY=37
    TK_GRAY=38
    TK_YELLOW=39
    TK_AQUA=40
    TK_FUCHSIA=41
    TK_BLACK=42
    TK_OLIVE=43
    TK_TEAL=44
    TK_PURPLE=45
    SYM_SEMI_COL=46
    SYM_DOUB_COL=47
    SYM_COMMA=48
    SYM_UNDER_SCORE=49
    SYM_CURLY_BRACK_OPEN=50
    SYM_CURLY_BRACK_CLOSE=51
    SYM_SQUARE_BRACK_OPEN=52
    SYM_SQUARE_BRACK_CLOSE=53
    SYM_PAREN_OPEN=54
    SYM_PAREN_CLOSE=55
    SYM_ASSIGN=56
    SYM_EQUAL=57
    SYM_GRE_THAN=58
    SYM_LOW_THAN=59
    SYM_NOT_EQUAL=60
    SYM_GRE_EQ=61
    SYM_LOW_EQ=62
    SYM_OR=63
    SYM_AND=64
    SYM_QUOT=65
    SYM_PLUS=66
    SYM_MINUS=67
    SYM_MULT=68
    SYM_DIV=69
    TYPE_FLOAT=70
    TYPE_INT=71
    TYPE_ID=72
    TYPE_COLOR=73
    CTE_TAG=74
    TYPE_BOOL=75
    NEWLINE=76
    WS=77
    BLOCK_COMMENT=78
    LINE_COMMENT=79

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(QuetzalParser.MainContext,0)


        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuetzalParser.VariablesContext)
            else:
                return self.getTypedRuleContext(QuetzalParser.VariablesContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuetzalParser.FunctionContext)
            else:
                return self.getTypedRuleContext(QuetzalParser.FunctionContext,i)


        def getRuleIndex(self):
            return QuetzalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = QuetzalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            stack.initProgram()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QuetzalParser.TK_DEFINE:
                self.state = 73
                self.variables()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.function() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 85
            self.main()
            stack.printQuads()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TK_FUNC(self):
            return self.getToken(QuetzalParser.TK_FUNC, 0)

        def TK_MAIN(self):
            return self.getToken(QuetzalParser.TK_MAIN, 0)

        def SYM_PAREN_OPEN(self):
            return self.getToken(QuetzalParser.SYM_PAREN_OPEN, 0)

        def SYM_PAREN_CLOSE(self):
            return self.getToken(QuetzalParser.SYM_PAREN_CLOSE, 0)

        def SYM_CURLY_BRACK_OPEN(self):
            return self.getToken(QuetzalParser.SYM_CURLY_BRACK_OPEN, 0)

        def SYM_CURLY_BRACK_CLOSE(self):
            return self.getToken(QuetzalParser.SYM_CURLY_BRACK_CLOSE, 0)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuetzalParser.VariablesContext)
            else:
                return self.getTypedRuleContext(QuetzalParser.VariablesContext,i)


        def statute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuetzalParser.StatuteContext)
            else:
                return self.getTypedRuleContext(QuetzalParser.StatuteContext,i)


        def getRuleIndex(self):
            return QuetzalParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = QuetzalParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            stack.fill(stack.Saltos.pop(),stack.QuadCounter)
            self.state = 89
            self.match(QuetzalParser.TK_FUNC)
            namesTable.addFunction("main","void",stack.QuadCounter)
            self.state = 91
            self.match(QuetzalParser.TK_MAIN)
            stack.enterFunc()
            self.state = 93
            self.match(QuetzalParser.SYM_PAREN_OPEN)
            self.state = 94
            self.match(QuetzalParser.SYM_PAREN_CLOSE)
            self.state = 95
            self.match(QuetzalParser.SYM_CURLY_BRACK_OPEN)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QuetzalParser.TK_DEFINE:
                self.state = 96
                self.variables()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QuetzalParser.TK_RETURN) | (1 << QuetzalParser.TK_IF) | (1 << QuetzalParser.TK_WHILE) | (1 << QuetzalParser.TK_PRINT) | (1 << QuetzalParser.TK_READ) | (1 << QuetzalParser.TK_OPENIMG) | (1 << QuetzalParser.TK_SAVEIMG) | (1 << QuetzalParser.TK_GRAYSCALE) | (1 << QuetzalParser.TK_COLOR_REPLACE) | (1 << QuetzalParser.TK_EDGE_DETECTION) | (1 << QuetzalParser.TK_SCALE_IMAGE) | (1 << QuetzalParser.TK_GET_COLOR_PALETTE) | (1 << QuetzalParser.TK_COLOR_MATCH_IMAGE) | (1 << QuetzalParser.TK_ENCODE_STEGANOGRAPHY) | (1 << QuetzalParser.TK_DECODE_STEGANOGRAPHY) | (1 << QuetzalParser.TK_GET_IMAGE_HEIGHT) | (1 << QuetzalParser.TK_GET_IMAGE_WIDTH))) != 0) or _la==QuetzalParser.TYPE_ID:
                self.state = 102
                self.statute()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(QuetzalParser.SYM_CURLY_BRACK_CLOSE)
            stack.exitMain()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._types = None # TypesContext
            self._TYPE_ID = None # Token
            self._TYPE_INT = None # Token

        def TK_DEFINE(self):
            return self.getToken(QuetzalParser.TK_DEFINE, 0)

        def types(self):
            return self.getTypedRuleContext(QuetzalParser.TypesContext,0)


        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(QuetzalParser.TYPE_ID)
            else:
                return self.getToken(QuetzalParser.TYPE_ID, i)

        def SYM_SEMI_COL(self):
            return self.getToken(QuetzalParser.SYM_SEMI_COL, 0)

        def SYM_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(QuetzalParser.SYM_COMMA)
            else:
                return self.getToken(QuetzalParser.SYM_COMMA, i)

        def SYM_ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(QuetzalParser.SYM_ASSIGN)
            else:
                return self.getToken(QuetzalParser.SYM_ASSIGN, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuetzalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(QuetzalParser.ExpressionContext,i)


        def SYM_SQUARE_BRACK_OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(QuetzalParser.SYM_SQUARE_BRACK_OPEN)
            else:
                return self.getToken(QuetzalParser.SYM_SQUARE_BRACK_OPEN, i)

        def TYPE_INT(self, i:int=None):
            if i is None:
                return self.getTokens(QuetzalParser.TYPE_INT)
            else:
                return self.getToken(QuetzalParser.TYPE_INT, i)

        def SYM_SQUARE_BRACK_CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(QuetzalParser.SYM_SQUARE_BRACK_CLOSE)
            else:
                return self.getToken(QuetzalParser.SYM_SQUARE_BRACK_CLOSE, i)

        def getRuleIndex(self):
            return QuetzalParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)




    def variables(self):

        localctx = QuetzalParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(QuetzalParser.TK_DEFINE)
            self.state = 112
            localctx._types = self.types()
            self.state = 113
            localctx._TYPE_ID = self.match(QuetzalParser.TYPE_ID)
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QuetzalParser.SYM_SQUARE_BRACK_OPEN]:
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 114
                    self.match(QuetzalParser.SYM_SQUARE_BRACK_OPEN)
                    self.state = 115
                    localctx._TYPE_INT = self.match(QuetzalParser.TYPE_INT)
                    namesTable.addDimension((None if localctx._TYPE_INT is None else localctx._TYPE_INT.text))
                    self.state = 117
                    self.match(QuetzalParser.SYM_SQUARE_BRACK_CLOSE)
                    self.state = 120 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==QuetzalParser.SYM_SQUARE_BRACK_OPEN):
                        break
